sections for docs

--- a/Documentation/DebugSerial.tex
+++ b/Documentation/DebugSerial.tex
@@ -46,14 +46,10 @@ Ashey J. Robinson\\ \texttt{ashley181291@gmail.com}
 
 \input{definitions.tex}%import some definitions
 \clearpage
-%\listoftodos
-%\todo[inline]{Run a spell check on all files}
-%\begin{abstract}
-%Abstract
-%\end{abstract}
 
 \newpage
 \cleardoublepage
+
 \begin{abstract}
 
 DebugSerial is a tool for debugging embedded software using a simple serial connection.
@@ -64,10 +60,18 @@ This software relieves the embedded systems engineer from creating higher level 
 Protocols are defined and a rich GUI is provided so debugging using serial is simple from hardware all the way to visualisation.
 
 \end{abstract}
+
 \cleardoublepage
 \tableofcontents
 \cleardoublepage
+
+
 \input{Introduction.tex}
+\input{Terminal.tex}
+\input{Radix.tex}
+\input{Graph.tex}
+\input{Plotter.tex}
+\input{Image.tex}
 
 \end{document}
 
