--- a/Documentation/definitions.tex
+++ b/Documentation/definitions.tex
@@ -2,6 +2,7 @@
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
 \definecolor{mymauve}{rgb}{0.58,0,0.82}
+\newcommand{\ds}{\texttt{DebugSerial}}
 
 %Code Styles
 \lstset{basicstyle=\scriptsize\ttfamily,
