lots of diagrams for plott3er

--- a/Documentation/DebugSerial.tex
+++ b/Documentation/DebugSerial.tex
@@ -72,6 +72,8 @@ Protocols are defined and a rich GUI is provided so debugging using serial is si
 \input{Graph.tex}
 \input{Plotter.tex}
 \input{Image.tex}
+\input{Script.tex}
+
 
 \end{document}
 
